example/lib/src/l10n/errors/app_ar.arb
{
  "@@locale": "ar",
  "error": "حدث خطأ",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "حدث خطأ غير متوقع",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "تم إرسال تقرير الخطأ بنجاح.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}